--- a/sample_markup.html
+++ b/sample_markup.html
@@ -1,1 +1,11 @@
+<link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css">
+
+<script src="bower_components/snap.svg/dist/snap.svg-min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/mfly-commands/src/mflyCommands.js"></script>
+
+<script src="bower_components/wheel_menu/dist/js/wheel_menu.min.js"></script>
+
+<!-- Sample $scope.menu in sample_scope.js -->
+
 <wheel-menu menu="menu"></wheel-menu>
