--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,3 +1,5 @@
-<div id="demo-container">
+<!--<div id="demo-container">
 	<do-cks module="wheel_menu"></do-cks>
-</div>
+</div>-->
+<!--<wheel-menu menu="menu"></wheel-menu>-->
+<wheel-menu menu="menu"></wheel-menu>
