--- a/demo/docks.html
+++ b/demo/docks.html
@@ -1,4 +1,4 @@
-<div ng-controller="AppCtlr as app" class="docks-transition" ng-class="sidebarActive ? 'sidebar-darken' : ''">
+<!--<div ng-controller="AppCtlr as app" class="docks-transition" ng-class="sidebarActive ? 'sidebar-darken' : ''">
 
 	<div ng-class="sidebarActive ? 'sidebar-blur' : ''" class="docks-transition" ng-if="!readme">
 		<div class="heading">
@@ -213,4 +213,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div>-->
